preserve original text when reading primitives