@@ -24,6 +24,7 @@ import org.junit.Test;
 
 import com.google.gson.stream.JsonReader;
 
+import de.odysseus.staxon.json.stream.JsonStreamSource;
 import de.odysseus.staxon.json.stream.JsonStreamToken;
 
 public class GsonStreamSourceTest {
@@ -39,7 +40,7 @@ public class GsonStreamSourceTest {
 		Assert.assertEquals("alice", source.name());
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("bob", source.value());
+		Assert.assertEquals("bob", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.END_OBJECT, source.peek());
 		source.endObject();
@@ -57,7 +58,7 @@ public class GsonStreamSourceTest {
 		source.startArray();
 		
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("bob", source.value());
+		Assert.assertEquals("bob", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.END_ARRAY, source.peek());
 		source.endArray();
@@ -81,7 +82,7 @@ public class GsonStreamSourceTest {
 		source.startArray();
 		
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("bob", source.value());
+		Assert.assertEquals("bob", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.END_ARRAY, source.peek());
 		source.endArray();
@@ -114,10 +115,10 @@ public class GsonStreamSourceTest {
 		source.startArray();
 		
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("edgar", source.value());
+		Assert.assertEquals("edgar", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("charlie", source.value());
+		Assert.assertEquals("charlie", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.END_ARRAY, source.peek());
 		source.endArray();
@@ -153,7 +154,7 @@ public class GsonStreamSourceTest {
 		source.startArray();
 		
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("bob", source.value());
+		Assert.assertEquals("bob", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.END_ARRAY, source.peek());
 		source.endArray();
@@ -165,7 +166,7 @@ public class GsonStreamSourceTest {
 		source.startArray();
 		
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("bob", source.value());
+		Assert.assertEquals("bob", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.END_ARRAY, source.peek());
 		source.endArray();
@@ -189,22 +190,22 @@ public class GsonStreamSourceTest {
 		source.startArray();
 		
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("", source.value());
+		Assert.assertEquals("", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("abc", source.value());
+		Assert.assertEquals("abc", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("\b\f\n\r\t", source.value());
+		Assert.assertEquals("\b\f\n\r\t", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("\"", source.value());
+		Assert.assertEquals("\"", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("\\", source.value());
+		Assert.assertEquals("\\", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("\u001F", source.value());
+		Assert.assertEquals("\u001F", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.END_ARRAY, source.peek());
 		source.endArray();
@@ -217,18 +218,25 @@ public class GsonStreamSourceTest {
 	public void testLiteralValues() throws IOException {
 		StringReader reader = new StringReader("[true,false,null]");
 		GsonStreamSource source = new GsonStreamSource(new JsonReader(reader));
+		JsonStreamSource.Value value = null;
 
 		Assert.assertEquals(JsonStreamToken.START_ARRAY, source.peek());
 		source.startArray();
 		
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals(Boolean.TRUE, source.value());
+		value = source.value();
+		Assert.assertEquals("true", value.text);
+		Assert.assertEquals(Boolean.TRUE, value.data);
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals(Boolean.FALSE, source.value());
+		value = source.value();
+		Assert.assertEquals("false", value.text);
+		Assert.assertEquals(Boolean.FALSE, value.data);
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertNull(source.value());
+		value = source.value();
+		Assert.assertNull(value.text);
+		Assert.assertNull(value.data);
 
 		Assert.assertEquals(JsonStreamToken.END_ARRAY, source.peek());
 		source.endArray();
@@ -241,27 +249,40 @@ public class GsonStreamSourceTest {
 	public void testNumberValues() throws IOException {
 		StringReader reader = new StringReader("[123,12e3,12E3,12.3,1.2e3,1.2E3]");
 		GsonStreamSource source = new GsonStreamSource(new JsonReader(reader));
+		JsonStreamSource.Value value = null;
 
 		Assert.assertEquals(JsonStreamToken.START_ARRAY, source.peek());
 		source.startArray();
 		
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals(Long.valueOf("123"), source.value());
+		value = source.value();
+		Assert.assertEquals("123", value.text);
+		Assert.assertEquals(new Long("123"), value.data);
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals(Double.valueOf("12e3").longValue(), source.value());
+		value = source.value();
+		Assert.assertEquals("12e3", value.text);
+		Assert.assertEquals(new Double("12e3"), value.data);
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals(Double.valueOf("12E3").longValue(), source.value());
+		value = source.value();
+		Assert.assertEquals("12E3", value.text);
+		Assert.assertEquals(new Double("12E3"), value.data);
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals(Double.valueOf("12.3"), source.value());
+		value = source.value();
+		Assert.assertEquals("12.3", value.text);
+		Assert.assertEquals(new Double("12.3"), value.data);
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals(Double.valueOf("1.2e3").longValue(), source.value());
+		value = source.value();
+		Assert.assertEquals("1.2e3", value.text);
+		Assert.assertEquals(new Double("1.2e3"), value.data);
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals(Double.valueOf("1.2E3").longValue(), source.value());
+		value = source.value();
+		Assert.assertEquals("1.2E3", value.text);
+		Assert.assertEquals(new Double("1.2E3"), value.data);
 
 		Assert.assertEquals(JsonStreamToken.END_ARRAY, source.peek());
 		source.endArray();
@@ -294,7 +315,7 @@ public class GsonStreamSourceTest {
 		Assert.assertEquals("alice", source.name());
 
 		Assert.assertEquals(JsonStreamToken.VALUE, source.peek());
-		Assert.assertEquals("bob", source.value());
+		Assert.assertEquals("bob", source.value().text);
 
 		Assert.assertEquals(JsonStreamToken.END_OBJECT, source.peek());
 		source.endObject();
